--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-security'
 	compile 'org.thymeleaf.extras:thymeleaf-extras-springsecurity4:2.1.2.RELEASE'
 	compile 'com.google.code.gson:gson:2.7'
+	compile group: 'org.jasypt', name: 'jasypt', version: '1.9.0'
+
 
 	runtime 'com.h2database:h2'
     runtime 'javax.transaction:jta:1.1'
