--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,15 @@ dependencies {
     runtime 'org.aspectj:aspectjweaver:1.8.7'
 
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
+	testCompile("org.dbunit:dbunit:2.5.1")
+	testCompile("com.github.springtestdbunit:spring-test-dbunit:1.2.1")
+	testCompile("org.assertj:assertj-core:3.2.0")
+	testCompile("net.sourceforge.htmlunit:htmlunit:2.20")
+	testCompile("org.easytesting:fest-assert:1.4")
+	testCompile 'junit:junit:4.12'
+	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-test
+	testCompile ("org.springframework.security:spring-security-test:4.0.0.RELEASE")
+
 }
 
 task wrapper(type: Wrapper) {
